test/equality/negative/type_arg.mli
type 'a t

val f : 'a t -> 'b t -> bool
(*@ equality *)
